Bump versions for docker