@@ -1,4 +1,4 @@
-FROM maven:3.6-jdk-11 AS mavenbuild
+FROM maven:3-eclipse-temurin-17 AS mavenbuild
 
 COPY pom.xml /home/app/
 COPY src /home/app/src
@@ -8,13 +8,13 @@ COPY config /home/app/config
 
 RUN mvn -q -f /home/app/pom.xml package -DskipTests
 
-FROM jetty:9.4-jre11
+FROM jetty:12.0.8-jdk17
 USER jetty:jetty
 
 COPY --from=mavenbuild /home/app/target/inferno-fhir-reference-server.war /var/lib/jetty/webapps/root.war
 COPY ./resources /var/lib/jetty/resources/
 
-RUN java -jar "$JETTY_HOME/start.jar" --create-startd --add-to-start=http-forwarded
+RUN java -jar "$JETTY_HOME/start.jar" --create-startd --add-to-start=http-forwarded --add-modules=server,http,ee10-deploy
 
 EXPOSE 8080
 
